fixed_alignment_issue

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -254,7 +254,7 @@
 
 .our-instagram {
   padding: 80px 0;
-  background: url(./img/our-instagram.png);
+  background: url(src/assets/img/our-instagram.png);
   /* width: 100vw; */
   text-align: center;
   padding: 130px 0;
